--- a/Contacto.css
+++ b/Contacto.css
@@ -1,22 +1,23 @@
 *{
     box-sizing: border-box;
 }
+
 body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
-    background: url(img/fondoOnePiece.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
+    background-color: aqua;
 }
+
 .contenedor_c{
     width: 100%;
     padding: 15px;
 }
+
 .formulario{
     background: white;
     margin-top: 100px;
 }
+
 h1{
     padding-top: 20px;
     text-align: center;
@@ -31,10 +32,12 @@ input[type="text"]{
     padding: 10px;
     border: none;
 }
+
 .input-contenedor{
     margin-bottom: 15px;
     border: 1px solid gray;
 }
+
 .button{
     border: none;
     width: 100%;
@@ -44,22 +47,26 @@ input[type="text"]{
     padding: 15px 20px;
     border-radius: 5px;
     cursor: pointer;
-
 }
+
 .button:hover{
     background-color: cornflowerblue;
 }
+
 p{
     text-align: center;
 }
+
 .link{
     text-decoration: none;
     color: #1a2537;
     font-weight: 600px;
 }
+
 .link:hover{
     color: cornflowerblue;
 }
+
 @media(min-width: 768px){
     .formulario{
         margin-top: 150px;
@@ -68,12 +75,14 @@ p{
         border-radius: 2%;
     }
 }
+
 h2{
     padding-top: 20px;
     text-align: center;
     color: black;
     font-size: 48px;
 }
+
 *{
     margin: 0px;
     padding: 0px;
@@ -106,63 +115,55 @@ header img{
     mix-blend-mode: multiply;
 }
 
-/* ---------------------------------- */
+/* ------------------ */
 
-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+@media (min-width: 1300px) {
+    .contenido {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    .menu {
+        font-size: 18px;
+    }
 }
 
-nav{
-    margin: auto;
-    width: 100%;
-    justify-content: center;
-    display: flex;
+@media (min-width: 1024px) and (max-width: 1300px) {
+    .formulario {
+        width: 60%;
+    }
+    .contenido {
+        display: flex;
+        flex-direction: row;
+    }
 }
 
-.nav li a {
-    background-color: darkred;
-    color: black;
-    text-decoration: none;
-    padding: 10px 15px;
-    display: block;
-    width: 100%;
-
+@media (min-width: 768px) and (max-width: 1023px) {
+    .formulario {
+        margin-top: 20px;
+        width: 80%;
+        margin: 0 auto;
+    }
+    .menu {
+        font-size: 16px;
+    }
 }
 
-.nav li a:hover {
-    background-color: white;
+@media (max-width: 767px) {
+    .formulario {
+        width: 90%;
+        margin: 10px auto;
+    }
+    .menu {
+        font-size: 14px;
+    }
 }
 
-.nav > li {
-    float: left;
-    position: relative;
-}
-
-.nav li ul {
-    display: none;
-    position: absolute;
-    min-width: 150px;
-    background-color: darkred;
-    top: 100%;
-}
-
-.nav li:hover > ul {
-    display: block;
-}
-
-.nav li ul li {
-    position: relative;
-}
-
-.nav li ul li ul {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 150px;
-}
-
-.nav li ul li:hover > ul {
-    display: block;
+@media (max-width: 767px) and (orientation: landscape) {
+    .formulario {
+        width: 80%;
+    }
+    .contenido {
+        display: flex;
+        flex-direction: row;
+    }
 }
