--- a/flipcards.css
+++ b/flipcards.css
@@ -98,7 +98,6 @@ nav{
 }
 body{
     display: flex;
-    /*Propiedades para alinear y ajustar mejor las cartas*/
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
@@ -114,19 +113,12 @@ body{
     position: relative;
     width: 300px;
     height: 350px;
-    /*Aplicar margenes con resto de cartas*/
     margin: 20px;
 }
 .card .face{
     position: absolute;
     width: 100%;
     height: 100%;
-    /*determina si la cara posterior de un elemento es visible de frente al usuario.
-    La cara posterior de un elemento siempre es un fondo transparente, permitiendo,
-    cuando es visible, que se muestre una imagen de espejo de la cara frontal.
-    Tiene la propiedad visible: significa que la cara posterior es visible, 
-    permitiendo que la cara frontal se muestre invertida.
-    hidden: significa que la cara posterior no es visible, ocultando la cara frontal.*/
     backface-visibility: hidden;
     border-radius: 10px;
     overflow: hidden;
@@ -140,8 +132,6 @@ body{
     position: absolute;
     width: 100%;
     height: 100%;
-    /*Indica como el contenido de un elemento debera ser redimensionado,
-    para ajustarse a su contenedor.*/
     object-fit: cover;
 }
 .card .front h3{
@@ -186,4 +176,57 @@ body{
 }
 .card:hover .back{
     transform: perspective(600px) rotateY(360deg);
+}
+
+/* ------------------------------------------- */
+
+@media (min-width: 1300px) {
+    .contenido {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    .menu {
+        font-size: 18px;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1300px) {
+    .formulario {
+        width: 60%;
+    }
+    .contenido {
+        display: flex;
+        flex-direction: row;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    .formulario {
+        margin-top: 20px;
+        width: 80%;
+        margin: 0 auto;
+    }
+    .menu {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 767px) {
+    .formulario {
+        width: 90%;
+        margin: 10px auto;
+    }
+    .menu {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 767px) and (orientation: landscape) {
+    .formulario {
+        width: 80%;
+    }
+    .contenido {
+        display: flex;
+        flex-direction: row;
+    }
 }
