--- a/style.css
+++ b/style.css
@@ -120,6 +120,94 @@ nav{
 
 /* ----------------------------------- */
 
+.body_C{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    background-color: aqua;
+}
+
+.contenedor_C{
+    width: 35%;
+    padding: 15px;
+    align-items: center;
+    margin-top: 100px;
+
+}
+
+.formulario_C{
+    background: white;
+    margin-top: 100px;
+    width: 50%;
+    align-items: center;
+}
+
+.h1_C{
+    padding-top: 20px;
+    text-align: center;
+    color: black;
+    font-size: 48px;
+}
+
+input[type="text"]{
+    text-align: left;
+    font-size: 24px;
+    width: 80%;
+    padding: 10px;
+    border: none;
+}
+
+.input-contenedor{
+    margin-bottom: 15px;
+    border: 1px solid gray;
+}
+
+.button{
+    border: none;
+    width: 100%;
+    font-size: 24px;
+    color: white;
+    background-color: blue;
+    padding: 15px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.button:hover{
+    background-color: cornflowerblue;
+}
+
+p{
+    text-align: center;
+}
+
+.link{
+    text-decoration: none;
+    color: #1a2537;
+    font-weight: 600px;
+}
+
+.link:hover{
+    color: cornflowerblue;
+}
+
+@media(min-width: 768px){
+    .formulario{
+        margin-top: 150px;
+        width: 500px;
+        margin: auto;
+        border-radius: 2%;
+    }
+}
+
+.h2_C{
+    padding-top: 20px;
+    text-align: center;
+    color: black;
+    font-size: 48px;
+}
+
+/* ----------------------------------- */
+
 @media (min-width: 1300px) {
     .contenido {
         max-width: 1200px;
